build/log/idf_py_stderr_output_36368
Command: make -j 6 all
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c: In function 'echo_task':
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:64:14: error: pointer targets in passing argument 1 of 'sscanf' differ in signedness [-Werror=pointer-sign]
   64 |       sscanf(data, "%s", buff);
      |              ^~~~
      |              |
      |              uint8_t * {aka unsigned char *}
In file included from /home/tathuan/esp-idf/components/esp_libc/platform_include/stdio.h:17,
                 from /home/tathuan/esp-idf/components/esp_common/include/esp_err.h:10,
                 from /home/tathuan/esp-idf/components/esp_driver_usb_serial_jtag/include/driver/usb_serial_jtag.h:9,
                 from /home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:7:
/home/tathuan/.espressif/tools/riscv32-esp-elf/esp-15.2.0_20251204/riscv32-esp-elf/picolibc/include/stdio.h:300:28: note: expected 'const char *' but argument is of type 'uint8_t *' {aka 'unsigned char *'}
  300 | int     sscanf(const char *__buf, const char *__fmt, ...) __FORMAT_ATTRIBUTE__(scanf, 2, 3);
      |                ~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/usb_serial_echo_main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4813: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
